# git-monitor

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROJECT.md  vcpkg.json
.nvim/: config.json
docs/: step-01-types-and-mock-ui.md  step-02-config.md  step-03-github-client.md
src/: main.cpp
src/config/: config.cpp  config.hpp
src/github/: client.cpp  client.hpp  types.hpp
